--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
 .workoutBody {
     margin: 10px;
     padding: 15px;
+    padding-top: 30px;
     background: #262A35;
     border-radius: 10px;
 }
@@ -44,10 +45,14 @@
 }
 .workoutBody pre {
     background-color: #212038;
-    color: gray;
+    color: rgb(188, 188, 188);
     padding: 10px;
     white-space: pre-line; 
     margin-top: 0;
+    line-height: 1.6;
+}
+.workoutBody .hljs {
+    font-size: 16px
 }
 .workoutBody table {
     border-collapse: collapse;
@@ -109,6 +114,15 @@
 .function_ {
     color: #8be9fd
 }
+
+.hljs-string {
+    color: #50fa7b
+}
+
+.hljs-comment {
+    color: #6272a4
+}
+
 body {
     justify-content: center;
     align-items: center;
